--- a/app/src/main/res/layout/header.xml
+++ b/app/src/main/res/layout/header.xml
@@ -22,7 +22,8 @@
             android:focusable="true"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingVertical="10dp">
+            android:paddingVertical="10dp"
+            tools:ignore="InefficientWeight">
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -62,6 +63,7 @@
                     android:layout_gravity="center"
                     android:layout_marginEnd="10dp"
                     android:clickable="true"
+                    android:contentDescription="Settings"
                     android:focusable="true"
                     android:src="@drawable/baseline_home_24" />
 
@@ -71,6 +73,7 @@
                     android:layout_height="32dp"
                     android:layout_gravity="center"
                     android:clickable="true"
+                    android:contentDescription="Search"
                     android:focusable="true"
                     android:src="@drawable/baseline_app_settings_alt_24" />
 
